# jpeg-server

./: README.md
jpeg-client/cpp/: CMakeLists.txt  jpeg-client.cpp  jpeg-client.hpp  main.cpp
jpeg-client/python/: jpeg-client.py
jpeg-server/cpp/: CMakeLists.txt  jpeg-server.cpp  jpeg-server.hpp  main.cpp
jpeg-server/python/: jpeg-server.py
